--- a/MVC_Projekt_Elearning/appsettings.json
+++ b/MVC_Projekt_Elearning/appsettings.json
@@ -1,4 +1,6 @@
-{
+{ "ConnectionStrings": {
+    "Default": "Server=DESKTOP-HMGHF14\\SQLEXPRESS;Database=ElearningPB101Db;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
